/* 
  $ go install github.com/bufbuild/buf/cmd/buf@latest
  $ go install github.com/fullstorydev/grpcurl/cmd/grpcurl@latest
  $ go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
  $ go install github.com/bufbuild/connect-go/cmd/protoc-gen-connect-go@latest
  $ buf generate
*/
syntax="proto3";

package api.v1;

option go_package = "github.com/ugent-library/person-service/api/v1";

import "google/protobuf/timestamp.proto";

message IdRef {
  string id = 1;
  string type = 2;
}

message Person {
  string id = 1;
  bool active = 2;
  google.protobuf.Timestamp date_created = 3;
  google.protobuf.Timestamp date_updated = 4;
  string full_name = 5;
  string first_name = 6;
  string last_name = 7;
  string email = 8;
  string orcid = 9;
  string orcid_token = 10;
  string preferred_first_name = 11;
  string preferred_last_name = 12;
  string birth_date = 13;
  string title = 14;
  repeated IdRef other_id = 15;
  repeated string organization_id = 16;
  repeated string job_category = 17;
  repeated string role = 18;
  map<string,string> settings = 19;
}

message Organization {
  string id = 1;
  google.protobuf.Timestamp date_created = 2;
  google.protobuf.Timestamp date_updated = 3;
  string type = 4;
  string name_dut = 5;
  string name_eng = 6;
  string parent_id = 7;
  repeated IdRef other_id = 8;
}

message GetPersonRequest {
  string id = 1;
}

message GetPersonResponse {
  Person person = 1;   
}

message GetAllPersonRequest {}

message GetAllPersonResponse{
  Person person = 1;
}

message SuggestPersonRequest{
  string query = 1;
}
message SuggestPersonResponse{
  Person person = 1;
}

message GetOrganizationRequest {
  string id = 1;
}
message GetOrganizationResponse {
  Organization organization = 1;   
}

message GetAllOrganizationRequest {}
message GetAllOrganizationResponse {
  Organization organization = 1;
}

message SuggestOrganizationRequest{
  string query = 1;
}
message SuggestOrganizationResponse{
  Organization organization = 1;
}

message SetPersonOrcidTokenRequest {
  string id = 1;
  string orcid_token = 2;
}
message SetPersonOrcidTokenResponse {
  string message = 1;
}

message SetPersonOrcidRequest {
  string id = 1;
  string orcid = 2;
}
message SetPersonOrcidResponse {
  string message = 1;
}

message SetPersonRoleRequest {
  string id = 1;
  repeated string role = 2;
}
message SetPersonRoleResponse {
  string message = 1;
}

message SetPersonSettingsRequest {
  string id = 1;
  map<string,string> settings = 2;
}
message SetPersonSettingsResponse {
  string message = 1;
}

service PersonService {
  rpc GetPerson(GetPersonRequest) returns (GetPersonResponse);
  rpc GetAllPerson(GetAllPersonRequest) returns (stream GetAllPersonResponse);
  rpc SuggestPerson(SuggestPersonRequest) returns (stream SuggestPersonResponse);
  rpc GetOrganization(GetOrganizationRequest) returns (GetOrganizationResponse);
  rpc GetAllOrganization(GetAllOrganizationRequest) returns (stream GetAllOrganizationResponse);
  rpc SuggestOrganization(SuggestOrganizationRequest) returns (stream SuggestOrganizationResponse);
  rpc SetPersonOrcidToken(SetPersonOrcidTokenRequest) returns (SetPersonOrcidTokenResponse);
  rpc SetPersonOrcid(SetPersonOrcidRequest) returns (SetPersonOrcidResponse);
  rpc SetPersonRole(SetPersonRoleRequest) returns (SetPersonRoleResponse);
  rpc SetPersonSettings(SetPersonSettingsRequest) returns (SetPersonSettingsResponse);
}